@@ -1,15 +1,15 @@
 package org.dotwebstack.framework.backend.postgres;
 
-import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -52,7 +52,6 @@ class PostgresBackendLoaderTest {
   }
 
   @Test
-  @Disabled("fix me")
   void loadSingle_returnsMonoObject() {
     Map<String, Object> source = new HashMap<>();
     source.put("a", "bbb");
@@ -61,48 +60,33 @@ class PostgresBackendLoaderTest {
         .source(source)
         .build();
 
-    List<KeyCriteria> keyCriteria = List.of();
-    PostgresObjectType objectType = mock(PostgresObjectType.class);
-    when(objectType.getTable()).thenReturn("anyTable");
-    Map<FieldRequest, ObjectRequest> objectFields = Map.of();
-
-    Map<String, Object> mapValues = Map.of("a", "b");
-    ContextCriteria contextCriteria = mock(ContextCriteria.class);
-    when(contextCriteria.getValues()).thenReturn(mapValues);
-    when(contextCriteria.getName()).thenReturn("Brewery");
-    ObjectRequest request = ObjectRequest.builder()
-        .objectType(objectType)
-        .objectFields(objectFields)
-        .keyCriteria(keyCriteria)
-        .contextCriteria(contextCriteria)
-        .build();
-
     FetchSpec fetchSpec = mock(FetchSpec.class);
-    when(fetchSpec.all()).thenReturn(Flux.just(Map.of("@@@", "ccc")));
+    when(fetchSpec.all()).thenReturn(Flux.just(Collections.emptyMap()));
+    DatabaseClient.GenericExecuteSpec anotherSpec = mock(DatabaseClient.GenericExecuteSpec.class);
+    when(anotherSpec.fetch()).thenReturn(fetchSpec);
     DatabaseClient.GenericExecuteSpec spec = mock(DatabaseClient.GenericExecuteSpec.class);
-    when(spec.fetch()).thenReturn(fetchSpec);
+    when(spec.bind(anyInt(), any())).thenReturn(anotherSpec);
     when(databaseClient.sql(anyString())).thenReturn(spec);
 
-    var res = backendLoader.loadSingle(request, requestContext);
+    ObjectRequest objectRequest = initObjectRequest();
+
+    var res = backendLoader.loadSingle(objectRequest, requestContext);
+
     assertThat(res, CoreMatchers.is(notNullValue()));
     assertTrue(res instanceof Mono);
-    res.doOnNext(result -> assertThat(result.get("@@@"), is("ccc")))
+    res.doOnNext(result -> assertTrue(result.isEmpty()))
         .subscribe();
   }
 
   @Test
-  @Disabled("fix me")
   void loadMany_returnsFluxObject() {
     FetchSpec fetchSpec = mock(FetchSpec.class);
-    when(fetchSpec.all()).thenReturn(Flux.just(Map.of("@@@", "ccc")));
+    when(fetchSpec.all()).thenReturn(Flux.just(Collections.emptyMap()));
+    DatabaseClient.GenericExecuteSpec anotherSpec = mock(DatabaseClient.GenericExecuteSpec.class);
+    when(anotherSpec.fetch()).thenReturn(fetchSpec);
     DatabaseClient.GenericExecuteSpec spec = mock(DatabaseClient.GenericExecuteSpec.class);
-    when(spec.fetch()).thenReturn(fetchSpec);
+    when(spec.bind(anyInt(), any())).thenReturn(anotherSpec);
     when(databaseClient.sql(anyString())).thenReturn(spec);
-
-    org.dotwebstack.framework.backend.postgres.query.Query queryMock =
-        mock(org.dotwebstack.framework.backend.postgres.query.Query.class);
-    lenient().when(queryMock.execute(eq(databaseClient)))
-        .thenReturn(Flux.just(Map.of("@@@", "ccc")));
 
     Map<String, Object> source = new HashMap<>();
     source.put("a", "bbb");
@@ -111,21 +95,7 @@ class PostgresBackendLoaderTest {
         .source(source)
         .build();
 
-    List<KeyCriteria> keyCriteria = List.of();
-    PostgresObjectType objectType = mock(PostgresObjectType.class);
-    when(objectType.getTable()).thenReturn("anyTable");
-    Map<FieldRequest, ObjectRequest> objectFields = Map.of();
-
-    Map<String, Object> mapValues = Map.of("a", "b");
-    ContextCriteria contextCriteria = mock(ContextCriteria.class);
-    when(contextCriteria.getValues()).thenReturn(mapValues);
-    when(contextCriteria.getName()).thenReturn("Brewery");
-    ObjectRequest objectRequest = ObjectRequest.builder()
-        .objectType(objectType)
-        .objectFields(objectFields)
-        .keyCriteria(keyCriteria)
-        .contextCriteria(contextCriteria)
-        .build();
+    ObjectRequest objectRequest = initObjectRequest();
 
     CollectionRequest request = CollectionRequest.builder()
         .objectRequest(objectRequest)
@@ -136,7 +106,7 @@ class PostgresBackendLoaderTest {
     var res = backendLoader.loadMany(request, requestContext);
     assertThat(res, CoreMatchers.is(notNullValue()));
     assertTrue(res instanceof Flux);
-    res.doOnNext(result -> assertThat(result.get("@@@"), is(null)))
+    res.doOnNext(result -> assertTrue(result.isEmpty()))
         .subscribe();
   }
 
@@ -158,21 +128,7 @@ class PostgresBackendLoaderTest {
         .source(source)
         .build();
 
-    List<KeyCriteria> keyCriteria = List.of();
-    PostgresObjectType objectType = mock(PostgresObjectType.class);
-    when(objectType.getTable()).thenReturn("anyTable");
-    Map<FieldRequest, ObjectRequest> objectFields = Map.of();
-
-    Map<String, Object> mapValues = Map.of("a", "b");
-    ContextCriteria contextCriteria = mock(ContextCriteria.class);
-    when(contextCriteria.getValues()).thenReturn(mapValues);
-    when(contextCriteria.getName()).thenReturn("Brewery");
-    ObjectRequest objectRequest = ObjectRequest.builder()
-        .objectType(objectType)
-        .objectFields(objectFields)
-        .keyCriteria(keyCriteria)
-        .contextCriteria(contextCriteria)
-        .build();
+    ObjectRequest objectRequest = initObjectRequest();
 
     CollectionRequest collectionRequest = CollectionRequest.builder()
         .objectRequest(objectRequest)
@@ -191,4 +147,23 @@ class PostgresBackendLoaderTest {
     assertTrue(res instanceof Flux);
   }
 
+  private ObjectRequest initObjectRequest() {
+    List<KeyCriteria> keyCriteria = List.of();
+    PostgresObjectType objectType = mock(PostgresObjectType.class);
+    when(objectType.getTable()).thenReturn("anyTable");
+    Map<FieldRequest, ObjectRequest> objectFields = Map.of();
+
+    Map<String, Object> mapValues = Map.of("a", "bbb");
+    ContextCriteria contextCriteria = mock(ContextCriteria.class);
+    when(contextCriteria.getValues()).thenReturn(mapValues);
+    when(contextCriteria.getName()).thenReturn("Brewery");
+
+    return ObjectRequest.builder()
+        .objectType(objectType)
+        .objectFields(objectFields)
+        .keyCriteria(keyCriteria)
+        .contextCriteria(contextCriteria)
+        .build();
+
+  }
 }
